QtQml: Fix resolution of aliases to local aliases

When we find an alias to a local alias, we need to first check if the
target alias is already resolved. Otherwise we can't insert the source
alias, yet.

Amends commit 9e1378260a3f3a6eb4cad8d6ae47bc218e6a2b5f.

Pick-to: 6.10
Fixes: QTBUG-141059
Change-Id: If272a746595b39cb2dbc2b8cc0c2f688277cfe59
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>